# SCIRun

./: .clang-format  .coveralls.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  BasicTutorial.md  Dockerfile  Gemfile  IBBM_Networks  InstallationInstructions  LICENSE.md  README  README.md  README.rst  README2.rst  SCIRun5ModuleGeneration.md  SVD_test.srn5  TODO.md  VTKReadMe  _add_linked_nodes_to_linear_system_8cc.html  _algorithm_base_8cc.html  _algorithm_base_8h.html  _algorithm_base_8h_source.html  _algorithm_base_tests_8cc.html  _algorithm_data_8h.html  _algorithm_data_8h_source.html  _algorithm_factory_8h.html  _algorithm_factory_8h_source.html  _algorithm_factory_additions_8cc.html  _algorithm_fwd_8h.html  _algorithm_fwd_8h_source.html  _algorithm_input_builder_8h.html  _algorithm_input_builder_8h_source.html  _algorithm_interfaces_8h.html  _algorithm_interfaces_8h_source.html  _algorithm_logger_8h.html  _algorithm_logger_8h_source.html  (+6331 more)
src/: .gitignore  BOOST_WINDOWS_WORKING_ROOT_CMakeLists.txt  BOOST_WORKING_ROOT_CMakeLists.txt  CMakeLists.txt  CMakeLists.txt.save  CTestConfig.cmake  LATEST_TAG.txt  LICENSE.txt  ORIGINAL_MASTER_CMakeLists.txt  release.sh
src/Algorithms/: CMakeLists.txt
src/Algorithms/Base/: AlgorithmBase.cc  AlgorithmBase.h  CMakeLists.txt  Share.h
src/Algorithms/DataIO/: CMakeLists.txt  ReadMatrix.cc  ReadMatrix.h  Share.h  WriteMatrix.cc  WriteMatrix.h
src/Algorithms/Math/: AlgorithmFwd.h  AppendMatrix.cc  AppendMatrix.h  CMakeLists.txt  EvaluateLinearAlgebraBinary.cc  EvaluateLinearAlgebraBinary.h  EvaluateLinearAlgebraUnary.cc  EvaluateLinearAlgebraUnary.h  ReportMatrixInfo.cc  ReportMatrixInfo.h  Share.h
src/CMake/: BoostConfig.cmake  BoostMacros.cmake  PythonConfig.cmake  ReadMe.txt  SpirePM.cmake  TeemConfig.cmake  TestDataConfig.cmake  ToolkitsConfig.cmake  Welcome.txt  ZlibConfig.cmake  qt.conf
src/CMake/Modules/: CPack.Distribution.dist.in  CPack.Info.plist.in  FindOSPRay.cmake  MacOSXBundleInfo.plist.in  Version.cc.in
src/CMake/Templates/: CPack.GenericDescription.txt
src/CMake/Utils/: processSCIRunLibs.sh.in
src/CMake/scripts/: macdeploy.sh  repair_package.sh.in
src/Core/: CMakeLists.txt
src/Core/Algorithms/: CMakeLists.txt
src/Core/Application/: .gitignore  Application.cc  Application.h  CMakeLists.txt  Preferences.cc  Preferences.h  Version.cc  Version.h  share.h
src/Core/Basis/: Bases.h  Basis.h  BasisFwd.h  CMakeLists.txt  Constant.cc  Constant.h  CrvCubicHmt.h  CrvElementWeights.h  CrvLinearLgn.cc  CrvLinearLgn.h  CrvQuadraticLgn.cc  CrvQuadraticLgn.h  CrvSamplingSchemes.h  HexElementWeights.h  HexElementsWeights.h  HexSamplingSchemes.h  HexTricubicHmt.h  HexTricubicHmtScaleFactors.h  HexTricubicHmtScaleFactorsEdges.h  HexTrilinearLgn.cc  HexTrilinearLgn.h  HexTriquadraticLgn.cc  HexTriquadraticLgn.h  Locate.h  NoData.cc  NoData.h  NoElementWeights.h  PntSamplingSchemes.h  PrismCubicHmt.h  PrismElementWeights.h  PrismLinearLgn.cc  PrismLinearLgn.h  PrismQuadraticLgn.cc  PrismQuadraticLgn.h  PrismSamplingSchemes.h  QuadBicubicHmt.h  QuadBilinearLgn.cc  QuadBilinearLgn.h  QuadBiquadraticLgn.cc  QuadBiquadraticLgn.h  (+18 more)
src/Core/Command/: CMakeLists.txt  Command.cc  Command.h  CommandFactory.cc  CommandFactory.h  CommandQueue.cc  CommandQueue.h  GlobalCommandBuilderFromCommandLine.cc  GlobalCommandBuilderFromCommandLine.h  Share.h  share.h
src/Core/CommandLine/: CMakeLists.txt  CommandLine.cc  CommandLine.h  Share.h  share.h
src/Core/ConsoleApplication/: CMakeLists.txt  ConsoleApplication.cc  ConsoleApplication.h  ConsoleCommandFactory.cc  ConsoleCommandFactory.h  ConsoleCommands.cc  ConsoleCommands.h  share.h
src/Core/Containers/: Array1.h  Array2.h  Array3.h  CMakeLists.txt  FData.h  SearchGridT.cc  SearchGridT.h  StackBasedVector.h  StackVector.h  share.h
src/Core/DatabaseManager/: CMakeLists.txt  DatabaseManager.cc  DatabaseManager.h  share.h
src/Core/Datatypes/: BlockMatrix.cc  BlockMatrix.h  CMakeLists.txt  Color.cc  Color.h  ColorMap.cc  ColorMap.h  Datatype.cc  Datatype.h  DatatypeFwd.h  DenseColumnMatrix.h  DenseMatrix.h  Dyadic3DTensor.h  DyadicTensor.h  Feedback.cc  Feedback.h  Geometry.cc  Geometry.h  HasId.h  Material.cc  Material.h  Matrix.cc  Matrix.h  MatrixAlgorithms.cc  MatrixAlgorithms.h  MatrixComparison.h  MatrixFwd.h  MatrixIO.h  MatrixMathVisitors.h  MatrixTypeConversions.cc  MatrixTypeConversions.h  MetadataObject.cc  MetadataObject.h  PropertyManagerExtensions.cc  PropertyManagerExtensions.h  Scalar.cc  Scalar.h  Share.h  SparseRowMatrix.h  SparseRowMatrixFromMap.cc  (+10 more)
src/Core/Exceptions/: ArrayIndexOutOfBounds.cc  ArrayIndexOutOfBounds.h  AssertionFailed.cc  AssertionFailed.h  CMakeLists.txt  DimensionMismatch.cc  DimensionMismatch.h  (+17 more)
src/Dataflow/: CMakeLists.txt
src/Documentation/: TODO.md
src/Engine/: CMakeLists.txt
src/ExampleNets/: ElectrodeCoilSetupTestNet.srn5  GetFieldBoundary1.srn5  GetFieldBoundary1a.srn5  SLSx11_mac.srn5  SLSx11_win.srn5  SLSx2.srn5  SLSx2_win.srn5  SLSx30_win.srn5  buildTDCSbig.srn5  buildtdcsmatrix_small_example.srn5  bundleTest.srn5  calcGradients.srn5  copySparse.srn5  createFieldData2.srn5  createLatVolMesh.srn5  createLatVolWithData.srn5  csdfMulti.srn5  eab.py  eabLatVolData.py  helixWithVTK.srn5  jamesNetwork1.srn  jamesNetwork1.srn5  james_latvol_and_load.srn5  james_latvol_color.srn5  james_vis_latvol.srn5  joinFieldsBasic.srn5  latVolWithDataCpp.srn5  latVolWithDataCppSine.srn5  loadAllFields2.srn5  mapFieldDataOntoElems.srn5  noteTest1.srn5  readAllFields.py  readField1.srn5  readField2.srn5  readObjField.srn5  readShowTwoTrisurfs.srn5  readSockTriSurf.srn5  readTriSurfPts.srn5  sample.srn5fragment  showCubeBoundaries.srn5  (+13 more)
src/Graphics/: CMakeLists.txt
src/Interface/: CMakeLists.txt  qt_include.h
src/Main/: CMakeLists.txt  scirunMain.cc
src/Modules/: CMakeLists.txt
src/Resources/: LegacyModuleImporter.xml
src/Samples/: .gitignore  matrix1.txt  matrix1Out.txt  moduleTestMatrix.txt  network.srn  scirun5demo.srn
src/Testing/: CMakeLists.txt
src/include/: CMakeLists.txt  sci_debug.h
(+8604 files in other folders)
